kubernetes/apps/base/flux-system/flux-system-common/monitoring/networkpolicy-webhooks.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhooks
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: notification-controller
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
